# Matching-Master

./: CMakeLists.txt  README.md
Classes/: AdmobManager.cpp  AdmobManager.h  AndroidScene.cpp  AndroidScene.h  AppDelegate.cpp  AppDelegate.h  BaseObject.cpp  BaseObject.h  ButtonCustom.cpp  ButtonCustom.h  CheckPairBot.cpp  CheckPairBot.h  DrawLine.cpp  DrawLine.h  GameBoard.cpp  GameBoard.h  GameDefine.h  GameScene.cpp  GameScene.h  HomeScene.cpp  HomeScene.h  MainObject.cpp  MainObject.h  MyLine.cpp  MyLine.h  PopupGame.cpp  PopupGame.h  ProgressBarCustom.cpp  ProgressBarCustom.h  RandomBot.cpp  RandomBot.h  RandomIndex.cpp  RandomIndex.h
Resources/imagegameScene/: sprite_frame_cache.plist
Store/Android-Key/: matchingmaster  password.md
cocos2d/: CHANGELOG
cocos2d/cocos/ui/: CMakeLists.txt
proj.android/: build.gradle  gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.android/app/src/org/cocos2dx/cpp/: AndroidAdManager.java  AppActivity.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios/MatchingMaster.xcodeproj/: project.pbxproj
proj.ios/MatchingMaster.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
proj.ios/MatchingMaster.xcodeproj/project.xcworkspace/xcuserdata/harry.nguyen.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios/MatchingMaster.xcodeproj/project.xcworkspace/xcuserdata/hoangnc.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios/MatchingMaster.xcodeproj/xcuserdata/harry.nguyen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
proj.ios/MatchingMaster.xcodeproj/xcuserdata/harry.nguyen.xcuserdatad/xcschemes/: xcschememanagement.plist
proj.ios/MatchingMaster.xcodeproj/xcuserdata/hoangnc.xcuserdatad/xcschemes/: PikachuOnetClassic-desktop.xcscheme  PikachuOnetClassic-mobile.xcscheme  xcschememanagement.plist
proj.ios/ios/: Info.plist
